# modernCfd

./: .gitignore  CMakeLists.txt  README.md  vtk
config/: GetBlaze.cmake
connectivity/: CMakeLists.txt
connectivity/include/connectivity/: ConnectivityBuilder.h  CrConnectivity.h
connectivity/src/: ConnectivityBuilder.cpp  CrConnectivity.cpp
connectivity/src/test/: CMakeLists.txt  ConnectivityTests.cpp
discretization/: CMakeLists.txt
discretization/include/discretization/: VolumeMesh.h
discretization/src/: VolumeMesh.cpp
geometry/: CMakeLists.txt
geometry/include/geometry/: BernsteinPolynomials.h  BezierCurve.h  BezierSurface.h  BezierUtils.h  NurbsCurve.h  NurbsUtils.h
geometry/src/test/: BezierTests.cpp  CMakeLists.txt  GeometryTests.cpp  NurbsTests.cpp
modules/cfdp/src/VtkGeom/: ControlPointsWidget.py  CreateCurveWindow.py  GeometryRenderer.py
modules/cfdp/src/common/: DisableAfterComplete.py  ListInputWidget.py  MultipleListInput.py  ParentedCallback.py
modules/cfdp/src/geometry/: NurbsUtils.py
modules/cfdp/src/main/: ModernCfdMainWindow.py  app.py
modules/cfdp/test/: geomTest.py  helloQt.py
modules/test/: helloQt.py
mpi/: CMakeLists.txt
mpi/bindings/: MpiBindings.cpp
mpi/src/: dummy.cpp
numeric/include/numeric/: NumericTraits.h
readers/: CMakeLists.txt
readers/bindings/: MshReaderBinding.cpp  ReadersBindings.cpp
readers/include/readers/: ElementsReader.h  EntitiesReader.h  FormatReader.h  MeshBuilderVisitor.h  MshReader.h  NodesReader.h  PhysicalNamesReader.h  SectionReader.h
readers/src/: ElementsReader.cpp  EntitiesReader.cpp  FormatReader.cpp  MeshBuilderVisitor.cpp  MshReader.cpp  NodesReader.cpp  PhysicalNamesReader.cpp  SectionReader.cpp
storage/: CMakeLists.txt
storage/bindings/: Arrays.cpp  ContiguousDataStore_binding.cpp  StorageBindings.cpp
storage/include/storage/: ContiguousDataStore.h  DataKey.h  StorageSite.h  SubsetStorageSite.h
storage/src/: DataKey.cpp  StorageSite.cpp  SubsetStorageSite.cpp
storage/src/test/: CMakeLists.txt  StorageTests.cpp
utils/include/math/: Assign.h  Factorial.h
utils/include/utils/: PrintElements.h  ReadType.h  RemoveConstRef.h
